# delaunay

./: .gitignore  CMakeLists.txt
data/: grid.node
lib/Eigen/: AlignedVector
lib/osgviewer/: CMakeLists.txt  environment.cpp  environment.h  plotting.cpp  plotting.h  simplescene.cpp  simplescene.h  util.cpp  util.h
src/: CMakeLists.txt
src/delaunay/: Makefile  Makefile~  README  delaunay  geom2d.h  geom2d.h~  quadedge.C  quadedge.h  test.C~  test.cpp
src/qedge/: CMakeLists.txt  Data.h  DelaunaySubdivision.cpp  DelaunaySubdivision.h  Edge.cpp  Edge.h  QuadEdge.cpp  QuadEdge.h  io_utils.cpp  io_utils.h
src/test/: CMakeLists.txt  alternate_sort.cpp  delaunayApp.cpp  test_delaunay_vertical.cpp  test_ptr.cpp  test_read_node.cpp  test_viewer.cpp
src/utils/: CMakeLists.txt  geom_predicates.cpp  geom_predicates.h  predicates.c  sorting.cpp  sorting.h
